--- a/package.json
+++ b/package.json
@@ -10,18 +10,22 @@
   },
   "dependencies": {
     "@splinetool/react-spline": "^4.1.0",
+    "dotenv": "^17.2.3",
     "framer-motion": "^12.23.25",
     "lottie-react": "^2.4.1",
     "lucide": "^0.556.0",
     "lucide-react": "^0.556.0",
     "next": "16.0.7",
+    "nodemailer": "^7.0.11",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "react-toastify": "^11.0.5"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/nodemailer": "^7.0.4",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
